[project]
name = "nepbot"
version = "0.1.0"
description = "nepbot"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "nonebot-adapter-onebot>=2.4.3",
    "nonebot2[fastapi]>=2.3.2",
    "nonebot-plugin-kawaii-status>=0.1.5",
    "nonebot-plugin-alconna==0.49.0",
    "nonebot-plugin-githubcard>=0.2.2",
    "nonebot-plugin-memes>=0.6.2",
    "nonebot-plugin-ghtiles>=0.1.4",
    "httpx>=0.27.0",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_kawaii_status", "nonebot_plugin_alconna", "nonebot_plugin_githubcard", "nonebot_plugin_memes", "nonebot_plugin_ghtiles"]
plugin_dirs = []
builtin_plugins = ["echo"]

[tool.pdm]
